--- a/templates/registration.html
+++ b/templates/registration.html
@@ -23,6 +23,8 @@
         <button type="submit">Register</button>
     </form>
 
+    <p>Already have an account? <a href="/login/">Login here</a></p>
+
     <script>
         document.getElementById("registration-form").addEventListener("submit", async function(event) {
             event.preventDefault(); // Prevent default form submission
