--- a/templates/main.html
+++ b/templates/main.html
@@ -16,7 +16,6 @@
         document.getElementById("main-page").addEventListener("Create Task", async function(event) {
             event.preventDefault(); // Prevent default form submission
 
-
             // Create data object
             const data = {
                 login: login,
@@ -25,18 +24,18 @@
 
             // Send POST request with JSON data
             try {
-                const response = await fetch('/login/', {
-                    method: 'POST',
+                const response = await fetch('/task/', {
+                    method: 'GET',
                     headers: {
-                        'Content-Type': 'application/json'
+                        'Content-Type': 'application/json',
+                        'Authorization': `Bearer: ${sessionStorage.getItem('access_token')}`
                     },
                     body: JSON.stringify(data)
                 });
 
                 const result = await response.json();
                 if (response.ok) {
-                    alert(`${result.message}`);
-                    console.log(result);
+                    window.location.href = "/task";
                 } else {
                     alert(`Error: ${result.message}`);
                     console.log(result);
