--- a/templates/main.html
+++ b/templates/main.html
@@ -7,44 +7,8 @@
 </head>
 <body>
     <h1>Main Page</h1>
-    <form id="main-page">
-
+    <form id="main-page" action="/task/" method="GET">  <!-- Редирект на /tasks/ -->
         <button type="submit">Create Task</button>
     </form>
-
-    <script>
-        document.getElementById("main-page").addEventListener("Create Task", async function(event) {
-            event.preventDefault(); // Prevent default form submission
-
-            // Create data object
-            const data = {
-                login: login,
-                password: password
-            };
-
-            // Send POST request with JSON data
-            try {
-                const response = await fetch('/task/', {
-                    method: 'GET',
-                    headers: {
-                        'Content-Type': 'application/json',
-                        'Authorization': `Bearer: ${sessionStorage.getItem('access_token')}`
-                    },
-                    body: JSON.stringify(data)
-                });
-
-                const result = await response.json();
-                if (response.ok) {
-                    window.location.href = "/task";
-                } else {
-                    alert(`Error: ${result.message}`);
-                    console.log(result);
-                }
-            } catch (error) {
-                alert('Error while registering user');
-                console.log(error);
-            }
-        });
-    </script>
 </body>
 </html>
