--- a/templates/main.html
+++ b/templates/main.html
@@ -12,7 +12,7 @@
     </form>
     <br><br>
     <form id="get-by-id">
-    <label for="id">Login:</label>
+    <label for="id">Main</label>
         <input type="text" id="id" name="id" required>
         <button type="submit">View Task by ID</button>
         <br><br>
