--- a/templates/main.html
+++ b/templates/main.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main</title>
+
 </head>
 <body>
     <h1>Main Page</h1>
@@ -12,9 +13,18 @@
     </form>
     <br><br>
     <form id="get-by-id">
-    <label for="id">Login:</label>
+    <label for="id">ID:</label>
         <input type="text" id="id" name="id" required>
-        <button type="submit">View Task by ID</button>
+        <button type="submit">View Task</button>
+        <br><br>
+        {{ id }}<br>
+        {{ name }}<br>
+        {{ description }}<br>
+    </form>
+    <form id="delete-by-id">
+    <label for="id1">ID:</label>
+        <input type="text" id="id1" name="id1" required>
+        <button type="submit">Delete Task</button>
         <br><br>
         {{ id }}<br>
         {{ name }}<br>
@@ -44,7 +54,7 @@
                     // Redirect to main page
                     window.location.href = "/main"; // Redirect after successful registration
                 } else {
-                    alert(`Error: ${result.detail}`);
+                    alert(`Error: ${result.message}`);
                     console.log(result);
                 }
             } catch (error) {
